@@ -1,0 +1,222 @@
+###
+### Definition of the window to create a new map in editor2.
+###
+
+#define ONE_ROW_GRID
+[grid]
+	[row]
+		grow_factor = 0
+#enddef
+
+#define ONE_ROW_GRID_END
+	[/row]
+[/grid]
+#enddef
+
+[window]
+	id = "editor_settings"
+	description = "Editor settings dialog."
+
+	[resolution]
+		definition = "default"
+
+		automatic_placement = "true"
+		vertical_placement = "center"
+		horizontal_placement = "center"
+		
+		[grid]
+			[row]
+				grow_factor = 0
+				[column]
+					grow_factor = 1
+					border = "all"
+					border_size = 5
+					horizontal_alignment = "left"
+					[label]
+						definition = "title"
+						label = _ "Editor Settings"
+					[/label]
+				[/column]
+			[/row]			
+			[row]
+				[column]
+					[label]
+						definition = "default"
+						label = _ "Time of day lightning preset"
+					[/label]
+				[/column]
+			[/row]
+			[row]
+				grow_factor = 0
+				[column]
+					grow_factor = 1
+					horizontal_grow = "true" 
+					[grid]
+						[row]
+							grow_factor = 0
+							[column]
+								grow_factor = 1
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[label]
+									id = "current_tod"
+									definition = "default"
+								[/label]
+							[/column]							
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+								[button]
+									id = "next_tod"
+									definition = "default"
+									size_text = _ "Next"
+									label = _ "Next"
+								[/button]
+							[/column]
+						[/row]
+					[/grid]
+				[/column]
+			[/row]			
+			[row]
+				grow_factor = 0
+				[column]
+					[label]
+						id = "current_tod_image"
+						definition = "default"
+					[/label]
+				[/column]
+			[/row]			
+			[row]
+				grow_factor = 0
+				[column]
+					[toggle_button]
+						id = "custom_tod_toggle"
+						definition = "default"
+						label = _ "Custom lightning setting"
+					[/toggle_button]
+				[/column]
+			[/row]
+			[row]
+				[column]
+					[grid]
+						[row]
+							[column]
+								grow_factor = 0
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[label]
+									definition = "default"
+									label = _ "Red:"
+								[/label]
+							[/column]				
+							[column]
+								grow_factor = 1
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[slider]
+								    id = "custom_tod_red"
+								    definition = "default"
+								    best_slider_length = 511
+								    minimum_value = -255
+								    maximum_value = 255
+								    step_size = 1
+								[/slider]
+							[/column]
+						[/row]
+						[row]
+							[column]
+								grow_factor = 0
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[label]
+									definition = "default"
+									label = _ "Green:"
+								[/label]
+							[/column]				
+							[column]
+								grow_factor = 1
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[slider]
+								    id = "custom_tod_green"
+								    definition = "default"
+								    best_slider_length = 511
+								    minimum_value = -255
+								    maximum_value = 255
+								    step_size = 1
+								[/slider]
+							[/column]
+						[/row]
+						[row]
+							[column]
+								grow_factor = 0
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[label]
+									definition = "default"
+									label = _ "Blue:"
+								[/label]
+							[/column]				
+							[column]
+								grow_factor = 1
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+								[slider]
+								    id = "custom_tod_blue"
+								    definition = "default"
+								    best_slider_length = 511
+								    minimum_value = -255
+								    maximum_value = 255
+								    step_size = 1
+								[/slider]
+							[/column]
+						[/row]
+					[/grid]
+				[/column]
+			[/row]			
+			[row]
+				grow_factor = 0
+				[column]
+					grow_factor = 1
+					horizontal_grow = "true" 
+					[grid]
+						[row]
+							grow_factor = 0
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+								[button]
+									id = "ok"
+									definition = "default"
+									label = _ "OK"
+								[/button]
+							[/column]
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "right"
+								[button]
+									id = "cancel"
+									definition = "default"
+									label = _ "Cancel"
+								[/button]
+							[/column]
+						[/row]
+					[/grid]
+				[/column]
+			[/row]			
+		[/grid]
+	[/resolution]
+[/window]
+
+#undef ONE_ROW_GRID
+#undef ONE_ROW_GRID_END
