@@ -1,4 +1,10 @@
 Version 1.5.4+svn:
+ * Editor2:
+   * Added editor-specific settings dialog
+   * Lightning setting similar to that of old editor, with presets from a
+     (hardcoded) list of time_of_days. Can change the settings and see the
+	 effects without having to close the settings dialog. The preferences
+	 are shared with the old editor.
  * Graphics:
    * New or updated unit frames: Walking Corpse swimmer, Soulless swimmer
  * Language and i18n:
